--- a/real-time-free-4-all-communication.html
+++ b/real-time-free-4-all-communication.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script src="script.js"></script>
+    <script src="scriptnew.js"></script>
 </body>
 </html>
