--- a/p2p-rtc-single.html
+++ b/p2p-rtc-single.html
@@ -17,7 +17,7 @@ video {
 }
 </style>
 
-    <title>RTF 4AC</title>
+    <title>p2prtc</title>
 </head>
 <body>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
