--- a/p2prtc.html
+++ b/p2prtc.html
@@ -587,9 +587,9 @@ class UniqueObjectsWithGui extends Map {
     update(oldId, newId) {
         if (this.has(oldId)) {
             const object = this.get(oldId)
-            this.delete(object.id)
+            this.remove(object)
             object.id = newId
-            this.set(object.id, object)
+            this.add(object)
             return object
         }
         return null
@@ -690,22 +690,42 @@ LOCAL_PEER.sendStreams.addHtmlElement((stream, removeCallback) => {
 
 const connectionConfigContainer = addConnectionContainer.appendLabeledContainer('Configuration')
 const connnectionConfigTextarea = connectionConfigContainer.appendElement('textarea')
-connnectionConfigTextarea.value = '{}'
+connnectionConfigTextarea.value = 'copy connection configuration'
 
 const connectionDescription = addConnectionContainer.appendLabeledContainer('Description')
 const descriptionTextarea = connectionDescription.appendElement('textarea')
+descriptionTextarea.value = 'get offer or copy received offer'
 const GetOfferButton = connectionDescription.appendButton('Get Offer')
 
+connnectionConfigTextarea.addEventListener('paste', (event) => {
+    let pastedConfig
+    try {
+        LOCAL_PEER.config = JSON.parse(event.clipboardData.getData('text'))
+    } catch (error) {
+        event.target.value = `error parsing JSON: ${error.toString()}`
+        return
+    }
+})
+
 GetOfferButton.addEventListener('click', async () => {
-    LOCAL_PEER.config = JSON.parse(connnectionConfigTextarea.value)
     const firstOffer = await LOCAL_PEER.getFirstOffer()
     const firstOfferString = JSON.stringify(firstOffer)
-    await navigator.clipboard.writeText(firstOfferString)
-    descriptionTextarea.value = firstOfferString
+
+    // trying copping to clipboard
+    try {
+        await navigator.clipboard.writeText(firstOfferString)
+        descriptionTextarea.value = 'offer coppied to clipboard, send it to other peer and copy received answer'
+        
+    }
+    // if something went wrong show offer to be coped manually
+    catch (error) {
+        descriptionTextarea.value = firstOfferString
+        console.log(`error coping offer to clipboard: ${error.toString()}`)
+    }
 })
 
 descriptionTextarea.addEventListener('paste', async (event) => {
-
+    event.preventDefault()
     // get description
     let pastedDescription
     try {
@@ -721,10 +741,20 @@ descriptionTextarea.addEventListener('paste', async (event) => {
         // show answer if it exists
         if (firstAnswer) {
             const firstAnswerString = JSON.stringify(firstAnswer)
-            await navigator.clipboard.writeText(firstAnswerString)
-            event.target.value = firstAnswerString
+
+            // trying copping to clipboard
+            try {
+                await navigator.clipboard.writeText(firstAnswerString)
+                event.target.value = 'answer coppied to clipboard, send it to other peer'
+                
+            }
+            // if something went wrong show answer to be coped manually
+            catch (error) {
+                event.target.value = firstAnswerString
+                console.log(`error coping answer to clipboard: ${error.toString()}`)
+            }
         } else {
-            event.target.value = ''
+            event.target.value = 'answer received, get offer or copy received offer'
         }
     } catch (error) {
         event.target.value = `error receiving description: ${error.toString()}`
