disconnected connections can be connected again, not an unrecoverable state

--- a/p2prtc.html
+++ b/p2prtc.html
@@ -55,10 +55,9 @@ class LocalPeer {
                 }
                 // unrecoverable states
                 if (connection.rtcpc.connectionState === 'failed' ||
-                connection.rtcpc.connectionState === 'disconnected' ||
                 connection.rtcpc.connectionState === 'closed') {
                     // this.removeConnection(connection)
-                    // TODO
+                    // TOMAYBEDO
                     // remove connection
                     // try to reconnect somehow
                 }
